header notification count alignment issue

--- a/resident-ui/src/app/shared/header/header.component.css
+++ b/resident-ui/src/app/shared/header/header.component.css
@@ -95,7 +95,7 @@
 
 .mat-menu-item {
   overflow-wrap: break-word;
-  /* height: 40px; */
+  height: 40px;
 }
 
 ::ng-deep .mat-menu-panel.zoommenu {
